--- a/templates/chart_bar.html
+++ b/templates/chart_bar.html
@@ -5,7 +5,7 @@
 <html lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>Top 20 large cities</title>
+  <title>Top 20 largest cities</title>
   <meta name="author" content="kvykhrov">
   <meta name="description" content="test application">
   <meta name="viewport" content="width=device-width, initial-scale=1">
